add restaurant app url

--- a/index.html
+++ b/index.html
@@ -163,10 +163,14 @@
               <ul class="splide__list">
                 <li class="splide__slide border">
                   <div class="splide__slide__container">
-                    <img class="work-img" src="./img/work-img01.png">
+                    <a href="https://shota264.github.io/Restaurant_Reservation_App/Index.html" target="_blank">
+                      <img class="work-img" src="./img/work-img01.png">
+                    </a>
                   </div>
                   <div class="work-text">
-                    <h1 class="work-header">レストラン予約WEBアプリ</h1>
+                    <a href="https://shota264.github.io/Restaurant_Reservation_App/Index.html" target="_blank">
+                      <h1 class="work-header">レストラン予約WEBアプリ</h1>
+                    </a>
                     <p class="work-description">マネージャー、スタッフ、お客様の3つのユーズケースのレストラン予約システムです。</p>
                   </div>
                 </li>
