--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+
+<head prefix="og: https://ogp.me/ns#">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Portfolio 廣川翔太</title>
+  <meta name="description" content="廣川翔太のポートフォリオです。お楽しみください。">
+  
+  <meta property="og:url" content="https://shota264.github.io/Portfolio/" />
+  <meta property="og:title" content=" Portfolio | 廣川翔太" />
+  <meta property="og:description" content="廣川翔太のポートフォリオです。お楽しみください。" />
+  <meta property="og:image" content="https://shota264.github.io/Portfolio/img/my-pixcel.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
